excited to finish my first ever website

--- a/index.html
+++ b/index.html
@@ -9,18 +9,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
       <div class="half-width">
         <h1>Welcome To</h1>
-        <h1><span class="name-highlight">Rafa's</span> Website</h1>
+        <h1><span class="orange-highlight">Rafa's</span> Website</h1>
         <h3>Pro Stalker and Sleep Expert</h3>
         <p>Hello, this is Rafa. A lifetime pro procrastinator and a self-proclaimed sleep expert. I can remember the useless things easily. Now learning web development. I know I can't go far with anything I try to do. So, just doing anything that comes to my mind and chilling.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/fariza-rafa/">HIRE ME</a>
       </div>
-      <div class="half-width">
+      <div class="half-width"> 
           <img src="images/profile1.png" alt="">
-
       </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="https://mystarletteblog.wordpress.com/">VISIT MY BLOG</a>
+
+        </div>
+
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Developer</h2>
+            <h3 class="orange-highlight">2021 - Present | Pro Level Developer</h3>
+            <p>If I try my best then in the middle of 2021, I'll be the master of HTML, CSS and Javascript, In Sha Allah. Then I'll know everything needed to make a website function, efficiently. Let's see what happens. Hoping to give my best. Wish good luck for me.</p>
+
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>Programming Hero gave me a opportunity to learn web development. Now I'm in the first milestone. HTML and CSS is seeming very easy to me. It is fun learning with Programming Hero.</p>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Fariza Rafa 2021, all rights reserved.</p>
+    </footer>
    
 </body>
 </html>
